--- a/thesis/04-nmt-ctc.tex
+++ b/thesis/04-nmt-ctc.tex
@@ -322,7 +322,7 @@ outputs.
     \quad + weight averaging & 19.54 & 24.67 & 16.56 & 18.64 \\
     \quad + beam search & 19.81 & 25.21 & 17.09 & 18.80  \\
     \addlinespace
-    Encoder-decoder with pos. encoding & 18.13 & 22.75 & 12.51 & 11.35 \\
+    Encoder-decoder with pos. enc. & 18.13 & 22.75 & 12.51 & 11.35 \\
     \quad + weight averaging & 19.31 & 24.21 & 17.37 & 18.07 \\
     \quad + beam search & 19.93 & 24.71 & 17.68 & 19.80 \\
     \bottomrule
@@ -369,7 +369,7 @@ batch decoding.
 
   \begin{tabular}{lrr}
     \toprule
-     & \multicolumn{1}{l}{CPU} & \multicolumn{1}{l}{GPU} \\
+     & \mc{CPU} & \mc{GPU} \\
     \midrule
     \acs{ar}, batch=1 & 2,247 ms & 1,129 ms \\
     \acs{ar}, batch=100 & & 127 ms\\
