--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -3,24 +3,6 @@
 
 %%% Minor tweaks of style
 
-% These macros employ a little dirty trick to convince LaTeX to typeset
-% chapter headings sanely, without lots of empty space above them.
-% Feel free to ignore.
-\makeatletter
-\def\@makechapterhead#1{
-  {\parindent \z@ \raggedright \normalfont
-   \Huge\bfseries \thechapter. #1
-   \par\nobreak
-   \vskip 20\p@
-}}
-\def\@makeschapterhead#1{
-  {\parindent \z@ \raggedright \normalfont
-   \Huge\bfseries #1
-   \par\nobreak
-   \vskip 20\p@
-}}
-\makeatother
-
 % This macro defines a chapter, which is not numbered, but is included
 % in the table of contents.
 \def\chapwithtoc#1{
@@ -30,31 +12,6 @@
 
 % Draw black "slugs" whenever a line overflows, so that we can spot it easily.
 \overfullrule=1mm
-
-%%% Macros for definitions, theorems, claims, examples, ... (requires amsthm package)
-
-\theoremstyle{plain}
-\newtheorem{thm}{Theorem}
-\newtheorem{lemma}[thm]{Lemma}
-\newtheorem{claim}[thm]{Claim}
-
-\theoremstyle{plain}
-\newtheorem{defn}{Definition}
-
-\theoremstyle{remark}
-\newtheorem*{cor}{Corollary}
-\newtheorem*{rem}{Remark}
-\newtheorem*{example}{Example}
-
-%%% An environment for proofs
-
-%%% FIXME %%% \newenvironment{proof}{
-%%% FIXME %%%   \par\medskip\noindent
-%%% FIXME %%%   \textit{Proof}.
-%%% FIXME %%% }{
-%%% FIXME %%% \newline
-%%% FIXME %%% \rightline{$\square$}  % or \SquareCastShadowBottomRight from bbding package
-%%% FIXME %%% }
 
 %%% An environment for typesetting of program code and input/output
 %%% of programs. (Requires the fancyvrb package -- fancy verbatim.)
@@ -71,6 +28,18 @@
 \DeclareMathOperator{\var}{\textrm{var}}
 \DeclareMathOperator{\sd}{\textrm{sd}}
 
+\DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
+\DeclareMathOperator*{\softmax}{softmax}
+
+\DeclareMathOperator{\relu}{ReLu}
+\let\emptyset\varnothing{}
+
+\DeclareMathOperator*{\sgn}{sgn}
+\DeclareMathOperator{\attn}{Attn}
+\DeclareMathOperator{\multihead}{Multihead}
+\DeclareMathOperator{\concat}{concat}
+
 %%% Transposition of a vector/matrix
 \newcommand{\T}[1]{#1^\top}
 
@@ -85,3 +54,4 @@
 %%% Various table goodies
 \newcommand{\pulrad}[1]{\raisebox{1.5ex}[0pt]{#1}}
 \newcommand{\mc}[1]{\multicolumn{1}{c}{#1}}
+\newcommand{\mcl}[1]{\multicolumn{1}{l}{#1}}
