--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,40 @@
+@article{popel-etal-2020-transforming,
+  journal = {Nature Communications},
+  title = {Transforming machine translation: a deep learning system reaches news translation quality comparable to human professionals},
+  author = {Martin Popel and Marketa Tomkova and Jakub Tomek and {\L}ukasz Kaiser and Jakob Uszkoreit and Ond{\v{r}}ej Bojar and Zden{\v{e}}k {\v{Z}}abokrtsk{\'{y}}},
+  year = {2020},
+  volume = {11},
+  number = {4381},
+  pages = {1--15},
+  issn = {2041-1723},
+  doi={10.1038/s41467-020-18073-9},
+  url={https://www.nature.com/articles/s41467-020-18073-9},
+}
+
+
+@article{duchi2011adaptive,
+  title={Adaptive subgradient methods for online learning and stochastic optimization.},
+  author={Duchi, John and Hazan, Elad and Singer, Yoram},
+  journal={Journal of machine learning research},
+  volume={12},
+  number={7},
+  year={2011}
+}
+
+@article{zeiler2012adadelta,
+  title={Adadelta: an adaptive learning rate method},
+  author={Zeiler, Matthew D},
+  journal={arXiv preprint arXiv:1212.5701},
+  year={2012}
+}
+
+@misc{tieleman2012lecture,
+  title={{Lecture 6.5---RmsProp: Divide the gradient by a running average of its recent magnitude}},
+  author={Tieleman, T. and Hinton, G.},
+  howpublished={COURSERA: Neural Networks for Machine Learning},
+  year={2012}
+}
+
 @inproceedings{amodei-etal-2016-deep,
   title={Deep Speech 2: End-to-end Speech Recognition in English and Mandarin},
   author={Amodei, Dario and Ananthanarayanan, Sundaram and Anubhai, Rishita and
@@ -274,20 +311,19 @@ author={
                   non-autoregressive models.}
 }
 
-@article{ran2019guiding,
-  author =	 {Qiu Ran and Yankai Lin and Peng Li and Jie Zhou},
-  title =	 {Guiding Non-Autoregressive Neural Machine Translation Decoding
-                  with Reordering Information},
-  journal =	 {CoRR},
-  volume =	 {abs/1911.02215},
-  year =	 {2019},
-  url =		 {http://arxiv.org/abs/1911.02215},
-  archivePrefix ={arXiv},
-  eprint =	 {1911.02215},
-  timestamp =	 {Sat, 23 Jan 2021 01:17:25 +0100},
-  biburl =	 {https://dblp.org/rec/journals/corr/abs-1911-02215.bib},
-  bibsource =	 {dblp computer science bibliography, https://dblp.org}
-}
+
+@article{ran-etal-2021-guiding,
+  title={Guiding Non-Autoregressive Neural Machine Translation Decoding with
+                  Reordering Information},
+  volume={35},
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/17618},
+  number={15},
+  journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+  author={Ran, Qiu and Lin, Yankai and Li, Peng and Zhou, Jie},
+  year={2021},
+  month={May},
+  pages={13727-13735}}
+
 
 @inproceedings{ma2019flowseq,
   title =	 "{F}low{S}eq: Non-Autoregressive Conditional Sequence
@@ -341,35 +377,6 @@ author={
   year =	 {2019}
 }
 
-@inproceedings{li2019hint,
-  title =	 "Hint-Based Training for Non-Autoregressive Machine
-                  Translation",
-  author =	 "Li, Zhuohan and Lin, Zi and He, Di and Tian, Fei and Qin, Tao
-                  and Wang, Liwei and Liu, Tie-Yan",
-  booktitle =	 "Proceedings of the 2019 Conference on Empirical Methods in
-                  Natural Language Processing and the 9th International Joint
-                  Conference on Natural Language Processing (EMNLP-IJCNLP)",
-  month =	 nov,
-  year =	 "2019",
-  address =	 "Hong Kong, China",
-  publisher =	 "Association for Computational Linguistics",
-  url =		 "https://www.aclweb.org/anthology/D19-1573",
-  doi =		 "10.18653/v1/D19-1573",
-  pages =	 "5708--5713",
-  abstract =	 "Due to the unparallelizable nature of the autoregressive
-                  factorization, AutoRegressive Translation (ART) models have to
-                  generate tokens sequentially during decoding and thus suffer
-                  from high inference latency. Non-AutoRegressive Translation
-                  (NART) models were proposed to reduce the inference time, but
-                  could only achieve inferior translation accuracy. In this
-                  paper, we proposed a novel approach to leveraging the hints
-                  from hidden states and word alignments to help the training of
-                  NART models. The results achieve significant improvement over
-                  previous NART models for the WMT14 En-De and De-En datasets
-                  and are even comparable to a strong LSTM-based ART baseline
-                  but one order of magnitude faster in inference.",
-}
-
 @article{shao2020minimizing,
   title =	 {Minimizing the Bag-of-Ngrams Difference for Non-Autoregressive
                   Neural Machine Translation},
@@ -403,40 +410,12 @@ author={
   pages =	 {198-205}
 }
 
-@article{wang2019nonautoregressive,
+@article{wang-etal-2019-nonautoregressive,
   title =	 {Non-Autoregressive Machine Translation with Auxiliary
                   Regularization},
   volume =	 {33},
   url =		 {https://ojs.aaai.org/index.php/AAAI/article/view/4476},
   DOI =		 {10.1609/aaai.v33i01.33015377},
-  abstractNote = {&lt;p&gt;As a new neural machine translation approach,
-                  NonAutoregressive machine Translation (NAT) has attracted
-                  attention recently due to its high efficiency in
-                  inference. However, the high efficiency has come at the cost
-                  of not capturing the sequential dependency on the target side
-                  of translation, which causes NAT to suffer from two kinds of
-                  translation errors: 1) repeated translations (due to
-                  indistinguishable adjacent decoder hidden states), and 2)
-                  incomplete translations (due to incomplete transfer of source
-                  side information via the decoder hidden states). In this
-                  paper, we propose to address these two problems by improving
-                  the quality of decoder hidden representations via two
-                  auxiliary regularization terms in the training process of an
-                  NAT model. First, to make the hidden states more
-                  distinguishable, we regularize the similarity between
-                  consecutive hidden states based on the corresponding target
-                  tokens. Second, to force the hidden states to contain all the
-                  information in the source sentence, we leverage the dual
-                  nature of translation tasks (e.g., English to German and
-                  German to English) and minimize a backward reconstruction
-                  error to ensure that the hidden states of the NAT decoder are
-                  able to recover the source side sentence. Extensive
-                  experiments conducted on several benchmark datasets show that
-                  both regularization strategies are effective and can alleviate
-                  the issues of repeated translations and incomplete
-                  translations in NAT models. The accuracy of NAT models is
-                  therefore improved significantly over the state-of-the-art NAT
-                  models with even better efficiency for inference.&lt;/p&gt;},
   number =	 {01},
   journal =	 {Proceedings of the AAAI Conference on Artificial Intelligence},
   author =	 {Wang, Yiren and Tian, Fei and He, Di and Qin, Tao and Zhai,
@@ -444,6 +423,15 @@ author={
   year =	 {2019},
   month =	 {Jul.},
   pages =	 {5377-5384}
+}
+
+@misc{huang-etal-2021-nonautoregressive,
+      title={Non-Autoregressive Translation with Layer-Wise Prediction and Deep Supervision},
+      author={Chenyang Huang and Hao Zhou and Osmar R. Zaïane and Lili Mou and Lei Li},
+      year={2021},
+      eprint={2110.07515},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
 }
 
 @InProceedings{kaiser2018fast,
@@ -1104,7 +1092,7 @@ author={
   year =	 2014
 }
 
-@article{kingma2015adam,
+@article{kingma2014adam,
   author =	 {Kingma, Diederik P and Ba, Jimmy},
   title =	 {Adam: {A} Method for Stochastic Optimization},
   journal =	 {CoRR},
