text in chapter 4 mostly

--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -252,7 +252,7 @@ translation models, regardless the actual method used.
 % ------------------------------------------------------------------------------
 \paragraph{Iterative Refinement.} Another attempt to introduce latent variables
 in a non-autoregressive model was proposed by
-\citet{lee-etal-2018-deterministic}.  Instead of modelling fertility, the
+\citet{lee-etal-2018-deterministic}.  Instead of modeling fertility, the
 authors introduce $L$ discrete sequential latent variables interpreted as
 stages of refinement:
 %
