--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -345,7 +345,7 @@ of parameter updates.
 
   \begin{tabular}{lrr}
     \toprule
-    Model & En $\rightarrow$ De & De $\rightarrow$ En \\
+    Model & \mc{En $\rightarrow$ De} & \mc{De $\rightarrow$ En} \\
     \midrule
     Large & 27.0 & 30.9 \\
     Base & 22.8 & 29.7 \\
