--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,14 @@
+
+@book{koehn2009statistical,
+    author        = {Koehn, Philipp},
+    title         = {Statistical machine translation},
+    address       = {Cambridge, UK},
+    isbn          = {978-0521874151},
+    publisher     = {Cambridge University Press},
+    url           = {http://www.statmt.org/book/},
+    year          = {2009}
+}
+
 @article{popel-etal-2020-transforming,
   journal = {Nature Communications},
   title = {Transforming machine translation: a deep learning system reaches news translation quality comparable to human professionals},
@@ -206,6 +217,14 @@ author={
   title = {Human Behavior and the Principle of Least Effort},
   publisher = {Addison-Wesley},
   year = 1949
+}
+
+@mastersthesis{kasner2020incorporating,
+  title={Incorporating Language Models into Non-autoregressive Neural Machine
+         Translation},
+  author={Zdeněk Kasner},
+  year={2020},
+  school={Czech Technical University},
 }
 
 @misc{kasner2020improving,
