--- a/thesis/related-evaluation.org
+++ b/thesis/related-evaluation.org
@@ -39,3 +39,73 @@
    - even though mostly single GPU with batch size 1, the GPUs themselves
      differ, so is the underlying hardware the research teams have at their
      disposal
+
+
+* AR Baselines
+
+  | paper                 | architecture       | copied?       | score wmt14 ende | score wmt14 deen |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | Vaswani et al         | base beam 4        |               |            27.30 |              N/A |
+  |                       | big  beam 4        |               |            28.40 |              N/A |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | Gu et al              | base, greedy       |               |            22.71 |            26.39 |
+  |                       | base, beam 4       |               |            23.45 |            27.02 |
+  | Lee et al             | base, greedy       |               |            23.77 |            28.15 |
+  |                       | base, beam 4       |               |            24.57 |            28.47 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | fully NAT             | base ?             |               |            27.48 |            31.39 |
+  |                       | base 12-1 ?        |               |            26.21 |            30.80 |
+  | * unclear if beam     | base 12-1 + KD ?   |               |            27.34 |            30.95 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | mask-predict          | base beam 4        | vaswani       |            27.30 |                  |
+  |                       | base               |               |            27.74 |            31.09 |
+  |                       | base + KD          |               |            27.86 |            31.07 |
+  |                       | big  beam 4        | vaswani       |            28.40 |                  |
+  |                       | big                |               |            28.60 |            31.71 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | AXE                   | base beam 5        |               |            27.61 |            31.38 |
+  |                       | base b5 + KD       |               |            27.75 |            31.30 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | LaNMT                 | base               |               |            25.60 |                  |
+  |                       | base, beam 3       |               |            26.10 |                  |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | Latent Transformer    | base beam 4        | vaswani       |            27.30 |                  |
+  |                       | base beam 4        | gu et al      |             23.5 |                  |
+  |                       | base               | gu et al      |             22.7 |                  |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | NAT-REG               | base beam 4        | gu et al      |            23.45 |            27.02 |
+  |                       | base beam 4        | lee et al     |            24.57 |            28.47 |
+  |                       | base beam 4        | LT -> vaswani |             27.3 |                  |
+  |                       | base beam 4        |               |             27.3 |            31.29 |
+  |                       | weakened bb4       |               |            24.50 |                  |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | Bag-of-ngrams         | base greedy        | lee et al     |            23.77 |            28.15 |
+  | * UNDISCLOSED COPYING | base beam          | lee et al     |            24.57 |            28.47 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | GLAT                  | base beam 4        | vaswani       |            27.30 |                  |
+  | * unclear if beam     | base ?             |               |            27.48 |            31.27 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | FlowSeq               | base beam 4        | vaswani       |            27.30 |                  |
+  | * beam might be 5     | base beam 5 ?      |               |            27.16 |            31.44 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | Saharia et al         | base ?             |               |             27.8 |             31.2 |
+  | * unclear beam        | big ?              |               |             29.5 |             32.2 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | JM-NAT                | 6-6 512/512 ?      |               |            28.04 |            32.69 |
+  | * unclear beam        | weakened base      |               |             27.4 |            31.29 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | Hint-NAT              | LSTM               | ???           |            24.60 |                  |
+  |                       | ConvS2S            | ???           |            26.43 |                  |
+  | * kde vzali deen?     | base beam 4        | vaswani       |             27.3 |        31.29 ??? |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | Reorder-NAT           | 6-6 512/512 beam 4 |               |            27.17 |            31.95 |
+  |                       | 6-1 512/512 beam 4 |               |            25.52 |            29.31 |
+  |                       | 6-gru 512/512 b4   |               |            26.27 |            30.62 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+  | Huang                 | base               |               |            27.48 |            31.21 |
+  |-----------------------+--------------------+---------------+------------------+------------------|
+
+
+
+
+  Sometimes, base means 512/512. Original base is 512/2048
