--- a/thesis/04-nmt-ctc.tex
+++ b/thesis/04-nmt-ctc.tex
@@ -549,7 +549,7 @@ statistical \acs{mt} models \citep{koehn2009statistical}.
     \bottomrule
   \end{tabular}
 
-  \caption{\JH{add caption}}}%
+  \caption{\JH{add caption}}%
   \label{tab:}
 \end{table}
 
